--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,12 +22,12 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
           </div>
-          <div class="main-nav">
+          <div class="main-nav" >
             <ul>
               <li>
                 <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
@@ -47,7 +49,7 @@
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -74,7 +76,7 @@
 
     <div class="top-sec ptb-50">
         <div class="container">
-            <div class="top-text">
+            <div class="top-text" data-aos="fade-up">
                 <h3>
                     SinuTapasi.com
                 </h3>
@@ -93,10 +95,10 @@
 
     <!-- link card section start -->
 
-    <div class="link-sec ptb-50">
+    <div class="link-sec ptb-50" >
         <div class="container">
             <div class="link-wrap" >
-                <div class="link-box" style="background-image: url(assets/images/link-card1.jfif);">
+                <div class="link-box" style="background-image: url(assets/images/link-card1.jfif); " data-aos="fade-up">
                     <a href="luxury-accommodations.html">
                     <h3>
                         Luksusmajoituk
@@ -104,21 +106,21 @@ sia
                     </h3>
                 </a>
                 </div>
-                <div class="link-box" style="background-image: url(assets/images/link-card2.jpg);">
+                <div class="link-box" style="background-image: url(assets/images/link-card2.jpg);" data-aos="fade-up">
                     <a href="casino-hotels.html">
                     <h3>
                         Kasinohotellit
                     </h3>
                 </a>
                 </div>
-                <div class="link-box" style="background-image: url(assets/images/link-card3.jpg);">
+                <div class="link-box" style="background-image: url(assets/images/link-card3.jpg);" data-aos="fade-up">
                     <a href="city-hotels.html">
                     <h3>
                         Kaupunkihotellit
                     </h3>
                 </a>
                 </div>
-                <div class="link-box" style="background-image: url(assets/images/link-card4.jpeg);">
+                <div class="link-box" style="background-image: url(assets/images/link-card4.jpeg);" data-aos="fade-up">
                     <a href="scenic-retreats.html">
                     <h3>
                         Luonnonkaunis
@@ -126,7 +128,7 @@ retriittejä
                     </h3>
                 </a>
                 </div>
-                <div class="link-box" style="background-image: url(assets/images/link-card5.avif);">
+                <div class="link-box" style="background-image: url(assets/images/link-card5.avif);" data-aos="fade-up">
                     <a href="traditional-hotels.html">
                     <h3>
                         Perinteiset
@@ -143,13 +145,13 @@ hotellit
     <!-- top picks section start -->
             <div class="top-pick ptb-50" >
                 <div class="container">
-                    <div class="site-heading">
+                    <div class="site-heading" data-aos="fade-up">
                         <h2>
                             Tämän viikon suosituimmat valinnat
                         </h2>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6" data-aos="fade-right">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-1.jpg" alt="">
@@ -167,7 +169,7 @@ hotellit
                             </div>
                         </div>
 
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6"  data-aos="fade-up">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-2.jpg" alt="">
@@ -185,7 +187,7 @@ hotellit
                             </div>
                         </div>
 
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6" data-aos="fade-left">
                             <div class="pick-wrap">
                                 <div class="pick-img">
                                     <img src="assets/images/picks-3.jpg" alt="">
@@ -212,13 +214,13 @@ hotellit
 
             <div class="why-choose ptb-50">
                 <div class="container">
-                    <div class="site-heading">
+                    <div class="site-heading"  data-aos="fade-up">
                         <h2>
                             Miksi valita meidät?
                         </h2>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6"  data-aos="fade-up">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
                                     <img src="assets/images/choose1.png" alt="">
@@ -240,7 +242,7 @@ rauhallista pakopaikkaa.
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6"  data-aos="fade-up">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
                                     <img src="assets/images/choose2.png" alt="">
@@ -263,7 +265,7 @@ rauhallista pakopaikkaa.
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6"  data-aos="fade-up">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
                                     <img src="assets/images/choose3.png" alt="">
@@ -287,7 +289,7 @@ rauhallista pakopaikkaa.
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6"  data-aos="fade-up">
                             <div class="choose-wrap">
                                 <div class="choose-icn">
                                     <img src="assets/images/choose4.png" alt="">
@@ -318,7 +320,7 @@ rauhallista pakopaikkaa.
 
     <div class="news-letter ptb-50">
         <div class="container">
-             <div class="newsletter-wrap">
+             <div class="newsletter-wrap"  data-aos="fade-up">
                 <div class="newsletter-heading">
                  <h3>
                     Tilaa uutiskirjeemme pysyäksesi ajan tasalla
@@ -337,7 +339,7 @@ rauhallista pakopaikkaa.
 
     <!-- faq section start -->
 
-    <div class="faq-sec ptb-50">
+    <div class="faq-sec ptb-50"  data-aos="fade-up">
         <div class="container">
            <div class="site-heading">
                <h2>
@@ -450,7 +452,7 @@ rauhallista pakopaikkaa.
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50">
+    <div class="disclaimer-sec ptb-50"  data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
@@ -480,7 +482,7 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
     <!-- Disclaimer section end -->
 
       <!-- footer section start -->
-      <div class="site-footer ptb-50">
+      <div class="site-footer ptb-50"  data-aos="fade-up">
         <div class="container">
             <div class="row">
                <div class="col-lg-4 col-md-6">
@@ -604,6 +606,7 @@ hotellit
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
