--- a/luxury-accommodations.html
+++ b/luxury-accommodations.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,7 +22,7 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
@@ -28,7 +30,7 @@
           <div class="main-nav">
             <ul>
               <li>
-                <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
+                <a href="luxury-accommodations.html" class="active"> Luksusmajoituksia </a>
               </li>
               <li>
                 <a href="casino-hotels.html"> Kasinohotellit </a>
@@ -47,7 +49,7 @@
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -72,7 +74,7 @@
 
     <!-- top section start -->
 
-    <div class="top-sec ptb-50">
+    <div class="top-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="top-text">
                 <h3>
@@ -96,21 +98,21 @@
 
 <div class="luxury-main">
   <div class="container">
-    <div class="site-heading">
+    <div class="site-heading" data-aos="fade-up">
       <h2>
         Suomen suosituimmat luksushotellit
       </h2>
     </div>
     <div class="row">
-      <div class="luxury-wrap">
-         <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+         <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
               <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClilPxoTCNFj38KJGyHAv4So1AnDewysAa-kJ4zN_Zhsjv0U-zxPJaRoCaloQAvD_BwE" target="_blank">
                 <img src="assets/images/Luxury-Card-1.jpg" alt="">
               </a>
             </div>
          </div>
-         <div class="luxury-right">
+         <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
                 <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClilPxoTCNFj38KJGyHAv4So1AnDewysAa-kJ4zN_Zhsjv0U-zxPJaRoCaloQAvD_BwE" target="_blank">
@@ -153,7 +155,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
                <div class="read-more-btn">
                 <a href="javascript:void(0)"  class=" moreless-button" >
-                   Read More
+                   Lue lisää
                   </span>
                 </a>
 
@@ -162,7 +164,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
-                  Visit Website
+                 Vieraile verkkosivustolla
                   </span>
                 </a>
 
@@ -173,15 +175,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
          </div>
       </div>
 
-      <div class="luxury-wrap">
-        <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.stgeorgehelsinki.com/" target="_blank">
                <img src="assets/images/Luxury-Card-2.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.stgeorgehelsinki.com/" target="_blank">
@@ -225,7 +227,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -234,7 +236,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -245,15 +247,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
         </div>
      </div>
 
-     <div class="luxury-wrap">
-      <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+      <div class="luxury-left" data-aos="fade-right">
          <div class="luxury-img">
            <a href="https://www.lillaroberts.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCltNU2JK31wGOjOeqzbbbtCrOVO73zFrUJmMO4-EQAyUp4cmO14YUwBoCPHMQAvD_BwE" target="_blank">
              <img src="assets/images/Luxury-Card-3.jpg" alt="">
            </a>
          </div>
       </div>
-      <div class="luxury-right">
+      <div class="luxury-right" data-aos="fade-left">
          <div class="luxury-text">
             <h3>
              <a href="https://www.lillaroberts.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCltNU2JK31wGOjOeqzbbbtCrOVO73zFrUJmMO4-EQAyUp4cmO14YUwBoCPHMQAvD_BwE" target="_blank">
@@ -295,7 +297,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
             <div class="read-more-btn">
              <a href="javascript:void(0)"  class=" moreless-button" >
-                Read More
+                Lue lisää
                </span>
              </a>
 
@@ -304,7 +306,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
                <span class="button-82-shadow"></span>
                <span class="button-82-edge"></span>
                <span class="button-82-front text">
-               Visit Website
+              Vieraile verkkosivustolla
                </span>
              </a>
 
@@ -315,15 +317,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
       </div>
    </div>
 
-   <div class="luxury-wrap">
-    <div class="luxury-left">
+   <div class="luxury-wrap" data-aos="fade-up">
+    <div class="luxury-left" data-aos="fade-right">
        <div class="luxury-img">
          <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki?facilitatorId=RHGSEM&cid=a%3Aps+b%3Aggl+c%3Aemea+i%3Abrand+e%3Ardb+d%3Anob+r%3Abrt+f%3Aen-US+g%3Aho+h%3AFIHELPLZ+v%3Acf&gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljuGV0Ku5EBDLklJ11oCsAJcI6p1tp0wurxAQQFVhtxTkjQq-3AtahoCjjgQAvD_BwE&gclsrc=aw.ds" target="_blank">
            <img src="assets/images/Luxury-Card-4.jpg" alt="">
          </a>
        </div>
     </div>
-    <div class="luxury-right">
+    <div class="luxury-right" data-aos="fade-left">
        <div class="luxury-text">
           <h3>
            <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki?facilitatorId=RHGSEM&cid=a%3Aps+b%3Aggl+c%3Aemea+i%3Abrand+e%3Ardb+d%3Anob+r%3Abrt+f%3Aen-US+g%3Aho+h%3AFIHELPLZ+v%3Acf&gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljuGV0Ku5EBDLklJ11oCsAJcI6p1tp0wurxAQQFVhtxTkjQq-3AtahoCjjgQAvD_BwE&gclsrc=aw.ds" target="_blank">
@@ -366,7 +368,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
           <div class="read-more-btn">
            <a href="javascript:void(0)"  class=" moreless-button" >
-              Read More
+              Lue lisää
              </span>
            </a>
 
@@ -375,7 +377,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
              <span class="button-82-shadow"></span>
              <span class="button-82-edge"></span>
              <span class="button-82-front text">
-             Visit Website
+            Vieraile verkkosivustolla
              </span>
            </a>
 
@@ -386,15 +388,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
     </div>
  </div>
 
- <div class="luxury-wrap">
-  <div class="luxury-left">
+ <div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://www.auroravillage.fi/" target="_blank">
          <img src="assets/images/Luxury-Card-5.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.auroravillage.fi/" target="_blank">
@@ -436,7 +438,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -445,7 +447,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+          Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -456,15 +458,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
   </div>
 </div>
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://santashotels.fi/hotellit/hotel-santa-claus-rovaniemi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCllrYv3xAs2C83lnv3mYyWb8F_UjlwrWhZdiYHdKK1eDRNyUZQimHlRoC_wIQAvD_BwE" target="_blank">
          <img src="assets/images/Luxury-Card-6.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://santashotels.fi/hotellit/hotel-santa-claus-rovaniemi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCllrYv3xAs2C83lnv3mYyWb8F_UjlwrWhZdiYHdKK1eDRNyUZQimHlRoC_wIQAvD_BwE" target="_blank">
@@ -506,7 +508,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -515,7 +517,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+          Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -526,15 +528,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
   </div>
 </div>
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://levipanorama.fi/en/" target="_blank">
          <img src="assets/images/Luxury-Card-7.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://levipanorama.fi/en/" target="_blank">
@@ -576,7 +578,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -585,7 +587,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+          Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -598,15 +600,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
 
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
     <div class="luxury-img">
       <a href="https://www.kakslauttanen.fi/" target="_blank">
         <img src="assets/images/Luxury-Card-8.jpg" alt="">
       </a>
     </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.kakslauttanen.fi/" target="_blank">
@@ -646,7 +648,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -655,7 +657,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+          Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -666,15 +668,15 @@ ihanteellisen valinnan Helsingissä vieraileville.
   </div>
 </div>
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClg9pRlFRtHxxwl-ht3X57B4znv32PMlbj3Yh5KuPttq38KKAYtVPdRoC5joQAvD_BwE" target="_blank">
          <img src="assets/images/Luxury-Card-9.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClg9pRlFRtHxxwl-ht3X57B4znv32PMlbj3Yh5KuPttq38KKAYtVPdRoC5joQAvD_BwE" target="_blank">
@@ -715,7 +717,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -724,7 +726,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+          Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -745,9 +747,9 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
     <!-- newsletter section start -->
 
-    <div class="news-letter ptb-50">
+    <div class="news-letter ptb-50" >
         <div class="container">
-             <div class="newsletter-wrap">
+             <div class="newsletter-wrap" data-aos="fade-up">
                 <div class="newsletter-heading">
                  <h3>
                   Tilaa uutiskirjeemme pysyäksesi ajan tasalla
@@ -768,12 +770,12 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
     <div class="faq-sec ptb-50">
         <div class="container">
-           <div class="site-heading">
+           <div class="site-heading" data-aos="fade-up">
                <h2>
                 Usein Kysytyt Kysymykset (UKK)
                </h2>
            </div>
-             <div class="faq-wrap">
+             <div class="faq-wrap" data-aos="fade-up">
                <div class="accordion" id="accordionExample">
                  <div class="accordion-item">
                    <h2 class="accordion-header" id="headingOne">
@@ -879,7 +881,7 @@ ihanteellisen valinnan Helsingissä vieraileville.
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50">
+    <div class="disclaimer-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
@@ -1088,6 +1090,7 @@ hotellit
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
