--- a/term-and-conditions.html
+++ b/term-and-conditions.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
@@ -58,7 +59,7 @@
 
     <!-- banner section start -->
 
-    <div class="site-banner sub-banner" style="background-image: url(./assets/images/Traditional-banner.webp);">
+    <div class="site-banner sub-banner" style="background-image: url(./assets/images/term-banner.jpg);">
         <div class="banner-wrap">
             <div class="banner-text">
                 <h1>
