--- a/traditional-hotels.html
+++ b/traditional-hotels.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,7 +22,7 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
@@ -40,14 +42,14 @@
                 <a href="scenic-retreats.html"> Luonnonkaunis retriittejä </a>
               </li>
               <li>
-                <a href="traditional-hotels.html"> Perinteiset hotellit </a>
+                <a href="traditional-hotels.html" class="active"> Perinteiset hotellit </a>
               </li>
             </ul>
             <div class="close">
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -72,7 +74,7 @@
 
     <!-- top section start -->
 
-    <div class="top-sec ptb-50">
+    <div class="top-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="top-text">
                 <h3>
@@ -97,21 +99,21 @@
 
 <div class="luxury-main">
   <div class="container">
-    <div class="site-heading">
+    <div class="site-heading" data-aos="fade-up">
       <h2>
         Suomen parhaat perinteiset hotellit
       </h2>
     </div>
     <div class="row">
-      <div class="luxury-wrap">
-         <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+         <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
               <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCliyJnjq6jAnNIb9E38qEcmlLt2VSzfy9lIhx32ZGbqaPipbbTzksjBoCSgkQAvD_BwE" target="_blank">
                 <img src="assets/images/Traditional-Card-1.jpg" alt="">
               </a>
             </div>
          </div>
-         <div class="luxury-right">
+         <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
                 <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCliyJnjq6jAnNIb9E38qEcmlLt2VSzfy9lIhx32ZGbqaPipbbTzksjBoCSgkQAvD_BwE" target="_blank">
@@ -152,7 +154,7 @@
 
                <div class="read-more-btn">
                 <a href="javascript:void(0)"  class=" moreless-button" >
-                   Read More
+                   Lue lisää
                   </span>
                 </a>
 
@@ -161,7 +163,7 @@
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
-                  Visit Website
+                 Vieraile verkkosivustolla
                   </span>
                 </a>
 
@@ -173,15 +175,15 @@
       </div>
 
 
-      <div class="luxury-wrap">
-        <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.rantapuisto.fi/en/" target="_blank">
                <img src="assets/images/Traditional-Card-2.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.rantapuisto.fi/en/" target="_blank">
@@ -222,7 +224,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -231,7 +233,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -242,15 +244,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClnR1U6eZFLjZW0A-y90Un_x4nJGzir1hnsBsa4Bnu06wGW3wYh9ncBoCoqsQAvD_BwE" target="_blank">
                <img src="assets/images/Traditional-Card-3.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClnR1U6eZFLjZW0A-y90Un_x4nJGzir1hnsBsa4Bnu06wGW3wYh9ncBoCoqsQAvD_BwE" target="_blank">
@@ -291,7 +293,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -300,7 +302,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -311,15 +313,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.hotelhelka.com/" target="_blank">
                <img src="assets/images/Traditional-Card-4.webp" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.hotelhelka.com/" target="_blank">
@@ -359,7 +361,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -368,7 +370,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -379,15 +381,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.hotelarthur.fi/en/" target="_blank">
                <img src="assets/images/Traditional-Card-5.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.hotelarthur.fi/en/" target="_blank">
@@ -426,7 +428,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -435,7 +437,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -446,15 +448,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://bestwesternplushotelhaaga.h-rez.com/" target="_blank">
                <img src="assets/images/Traditional-Card-6.jpeg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://bestwesternplushotelhaaga.h-rez.com/" target="_blank">
@@ -493,7 +495,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -502,7 +504,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -514,15 +516,15 @@
      </div>
 
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.laplandhotels.com/FI/lapin-hotellit/pallas/lapland-hotels-pallas.html#:~:text=Autolla%20saapuessasi%20olemme%20aivan%20Pallastunturin%20juurella%20osoitteessa%20Pallastunturintie%20550%2C%2099330%20Pallastunturi." target="_blank">
                <img src="assets/images/Traditional-Card-7.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.laplandhotels.com/FI/lapin-hotellit/pallas/lapland-hotels-pallas.html#:~:text=Autolla%20saapuessasi%20olemme%20aivan%20Pallastunturin%20juurella%20osoitteessa%20Pallastunturintie%20550%2C%2099330%20Pallastunturi." target="_blank">
@@ -561,7 +563,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -570,7 +572,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -581,15 +583,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.laplandhotels.com/EN/hotels-in-lapland/rovaniemi/lapland-hotels-ounasvaara-chalets.html" target="_blank">
                <img src="assets/images/Traditional-Card-9.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.laplandhotels.com/EN/hotels-in-lapland/rovaniemi/lapland-hotels-ounasvaara-chalets.html" target="_blank">
@@ -629,7 +631,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -638,7 +640,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -649,15 +651,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-rovaniemi-city" target="_blank">
                <img src="assets/images/Traditional-Card-8.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-rovaniemi-city" target="_blank">
@@ -697,7 +699,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -706,7 +708,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -729,7 +731,7 @@
 
     <div class="news-letter ptb-50">
         <div class="container">
-             <div class="newsletter-wrap">
+             <div class="newsletter-wrap" data-aos="fade-up">
                 <div class="newsletter-heading">
                  <h3>
                   Tilaa uutiskirjeemme pysyäksesi ajan tasalla
@@ -750,12 +752,12 @@
 
     <div class="faq-sec ptb-50">
         <div class="container">
-           <div class="site-heading">
+           <div class="site-heading" data-aos="fade-up">
                <h2>
                 Usein Kysytyt Kysymykset (UKK)
                </h2>
            </div>
-             <div class="faq-wrap">
+             <div class="faq-wrap" data-aos="fade-up">
                <div class="accordion" id="accordionExample">
                  <div class="accordion-item">
                    <h2 class="accordion-header" id="headingOne">
@@ -861,7 +863,7 @@
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50">
+    <div class="disclaimer-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
@@ -1017,6 +1019,7 @@ hotellit
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
 
