--- a/casino-hotels.html
+++ b/casino-hotels.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,7 +22,7 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
@@ -31,7 +33,7 @@
                 <a href="luxury-accommodations.html"> Luksusmajoituksia </a>
               </li>
               <li>
-                <a href="casino-hotels.html"> Kasinohotellit </a>
+                <a href="casino-hotels.html" class="active"> Kasinohotellit </a>
               </li>
               <li>
                 <a href="city-hotels.html"> Kaupunkihotellit </a>
@@ -47,7 +49,7 @@
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -72,7 +74,7 @@
 
     <!-- top section start -->
 
-    <div class="top-sec ptb-50">
+    <div class="top-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="top-text">
                 <h3>
@@ -99,21 +101,21 @@
 
 <div class="luxury-main pb-50">
   <div class="container">
-    <div class="site-heading">
+    <div class="site-heading" data-aos="fade-up">
         <h2>
             Suomen suosituimmat kasinohotellit
         </h2>
     </div>
     <div class="row">
-      <div class="luxury-wrap">
-         <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+         <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
               <a href="https://casinohelsinki.fi/en/helsinki-front-page/" target="_blank">
                 <img src="assets/images/Casino-Card-1.jpg" alt="">
               </a>
             </div>
          </div>
-         <div class="luxury-right">
+         <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
                 <a href="https://casinohelsinki.fi/en/helsinki-front-page/" target="_blank">
@@ -153,7 +155,7 @@
 
                <div class="read-more-btn">
                 <a href="javascript:void(0)"  class=" moreless-button" >
-                   Read More
+                   Lue lisää
                   </span>
                 </a>
 
@@ -162,7 +164,7 @@
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
-                  Visit Website
+                  Vieraile verkkosivustolla
                   </span>
                 </a>
 
@@ -174,15 +176,15 @@
       </div>
 
 
-      <div class="luxury-wrap">
-        <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://casinohelsinki.fi/casino-tampere/" target="_blank">
                <img src="assets/images/Casino-Card-2.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://casinohelsinki.fi/casino-tampere/" target="_blank">
@@ -221,7 +223,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -230,7 +232,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -241,15 +243,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://pelaamo.fi/pelaamo/pelaamo-pori-prisma-etelavayla/" target="_blank">
                <img src="assets/images/Casino-Card-3.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://pelaamo.fi/pelaamo/pelaamo-pori-prisma-etelavayla/" target="_blank">
@@ -287,7 +289,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -296,7 +298,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -306,15 +308,15 @@
            </div>
         </div>
      </div>
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.casinocity.ax/" target="_blank">
                <img src="assets/images/Casino-Card-4.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.casinocity.ax/" target="_blank">
@@ -352,7 +354,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -361,7 +363,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -509,6 +511,7 @@ hotellit
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
