--- a/city-hotels.html
+++ b/city-hotels.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,7 +22,7 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
@@ -34,7 +36,7 @@
                 <a href="casino-hotels.html"> Kasinohotellit </a>
               </li>
               <li>
-                <a href="city-hotels.html"> Kaupunkihotellit </a>
+                <a href="city-hotels.html" class="active"> Kaupunkihotellit </a>
               </li>
               <li>
                 <a href="scenic-retreats.html"> Luonnonkaunis retriittejä </a>
@@ -47,7 +49,7 @@
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -72,7 +74,7 @@
 
     <!-- top section start -->
 
-    <div class="top-sec ptb-50">
+    <div class="top-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="top-text">
                 <h3>
@@ -96,21 +98,21 @@
 
 <div class="luxury-main">
   <div class="container">
-    <div class="site-heading">
+    <div class="site-heading" data-aos="fade-up">
       <h2>
         Suomen parhaat kaupunkihotellit
       </h2>
     </div>
     <div class="row">
-      <div class="luxury-wrap">
-         <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+         <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
               <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljDE0_6hZido7y6YrlyLiUfkKrXJpxjHM_9XRIyBRQLz-kTO4Rb3uhoC6-QQAvD_BwE" target="_blank">
                 <img src="assets/images/City-Card-1.jpg" alt="">
               </a>
             </div>
          </div>
-         <div class="luxury-right">
+         <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
                 <a href="https://www.hotelkamp.com/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCljDE0_6hZido7y6YrlyLiUfkKrXJpxjHM_9XRIyBRQLz-kTO4Rb3uhoC6-QQAvD_BwE" target="_blank">
@@ -152,7 +154,7 @@
 
                <div class="read-more-btn">
                 <a href="javascript:void(0)"  class=" moreless-button" >
-                   Read More
+                   Lue lisää
                   </span>
                 </a>
 
@@ -161,7 +163,7 @@
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
-                  Visit Website
+                  Vieraile verkkosivustolla
                   </span>
                 </a>
 
@@ -172,15 +174,15 @@
          </div>
       </div>
 
-      <div class="luxury-wrap">
-        <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.hotelhaven.fi/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCluc6MonyzWIuAbymj4s_FsGPrMFv-7HhHRQRzJh-3JqNeaWdDnSqSxoCPQkQAvD_BwE" target="_blank">
                <img src="assets/images/City-Card-2.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.hotelhaven.fi/en/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgCluc6MonyzWIuAbymj4s_FsGPrMFv-7HhHRQRzJh-3JqNeaWdDnSqSxoCPQkQAvD_BwE" target="_blank">
@@ -222,7 +224,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -231,7 +233,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -243,15 +245,15 @@
      </div>
 
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://clarionhotel.fi/" target="_blank">
                <img src="assets/images/City-Card-3.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://clarionhotel.fi/" target="_blank">
@@ -293,7 +295,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -302,7 +304,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -314,15 +316,15 @@
      </div>
 
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki-aleksanteri" target="_blank">
                <img src="assets/images/City-Card-4.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.radissonhotels.com/en-us/hotels/radisson-blu-helsinki-aleksanteri" target="_blank">
@@ -364,7 +366,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -373,7 +375,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -385,15 +387,15 @@
      </div>
 
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right"> 
            <div class="luxury-img">
              <a href="https://www.glohotels.fi/en/" target="_blank">
                <img src="assets/images/City-Card-5.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.glohotels.fi/en/" target="_blank">
@@ -436,7 +438,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -445,7 +447,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -456,15 +458,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.hotelarthur.fi/en/" target="_blank">
                <img src="assets/images/City-Card-6.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.hotelarthur.fi/en/" target="_blank">
@@ -505,7 +507,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -514,7 +516,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -526,15 +528,15 @@
      </div>
 
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.scandichotels.fi/hotellit/suomi/helsinki/scandic-simonkentta" target="_blank">
                <img src="assets/images/City-Card-7.webp" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.scandichotels.fi/hotellit/suomi/helsinki/scandic-simonkentta" target="_blank">
@@ -576,7 +578,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -585,7 +587,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -596,15 +598,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://hotellifinn.fi/en/home/" target="_blank">
                <img src="assets/images/City-Card-8.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://hotellifinn.fi/en/home/" target="_blank">
@@ -645,7 +647,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -654,7 +656,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -665,15 +667,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClrgk7Ru8T-ix3lxAU-962UyU6s8rLH18uvWbyVEnSqRUxHYvtAd8qBoCAcsQAvD_BwE" target="_blank">
                <img src="assets/images/City-Card-9.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://hotelf6.fi/?gad_source=1&gclid=CjwKCAjw_ZC2BhAQEiwAXSgClrgk7Ru8T-ix3lxAU-962UyU6s8rLH18uvWbyVEnSqRUxHYvtAd8qBoCAcsQAvD_BwE" target="_blank">
@@ -715,7 +717,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -724,7 +726,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+                 Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -748,7 +750,7 @@
 
     <div class="news-letter ptb-50">
         <div class="container">
-             <div class="newsletter-wrap">
+             <div class="newsletter-wrap" data-aos="fade-up">
                 <div class="newsletter-heading">
                  <h3>
                   Tilaa uutiskirjeemme pysyäksesi ajan tasalla
@@ -767,14 +769,14 @@
 
     <!-- faq section start -->
 
-    <div class="faq-sec ptb-50">
+    <div class="faq-sec ptb-50" >
         <div class="container">
-           <div class="site-heading">
+           <div class="site-heading" data-aos="fade-up">
                <h2>
                 Usein Kysytyt Kysymykset (UKK)
                </h2>
            </div>
-             <div class="faq-wrap">
+             <div class="faq-wrap" data-aos="fade-up">
                <div class="accordion" id="accordionExample">
                  <div class="accordion-item">
                    <h2 class="accordion-header" id="headingOne">
@@ -880,7 +882,7 @@
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50">
+    <div class="disclaimer-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
@@ -1036,6 +1038,7 @@ hotellit
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
 
