--- a/scenic-retreats.html
+++ b/scenic-retreats.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="robots" content="index, follow" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css">
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@2.3.0/dist/aos.css">
     <link rel="icon" href="assets/images/fav.png" >
     <link rel="stylesheet" href="assets/css/style.css" >
     <link rel="stylesheet" href="assets/css/media.css" >
@@ -20,7 +22,7 @@
     <header class="site-header">
       <div class="container">
         <nav>
-          <div class="site-logo">
+          <div class="site-logo" data-aos="fade-right">
             <a href="index.html">
               <img src="assets/images/logo.png" alt="" >
             </a>
@@ -37,7 +39,7 @@
                 <a href="city-hotels.html"> Kaupunkihotellit </a>
               </li>
               <li>
-                <a href="scenic-retreats.html"> Luonnonkaunis retriittejä </a>
+                <a href="scenic-retreats.html" class="active"> Luonnonkaunis retriittejä </a>
               </li>
               <li>
                 <a href="traditional-hotels.html"> Perinteiset hotellit </a>
@@ -47,7 +49,7 @@
                 <i class="fa-solid fa-x"></i>
             </div>
           </div>
-          <div class="toggle">
+          <div class="toggle" data-aos="fade-left">
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
@@ -72,7 +74,7 @@
 
     <!-- top section start -->
 
-    <div class="top-sec ptb-50">
+    <div class="top-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="top-text">
                 <h3>
@@ -94,21 +96,21 @@
 
 <div class="luxury-main">
   <div class="container">
-    <div class="site-heading">
+    <div class="site-heading" data-aos="fade-up">
       <h2>
         Suomen parhaat luonnonkauniit hotellit
       </h2>
     </div>
     <div class="row">
-      <div class="luxury-wrap">
-         <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+         <div class="luxury-left" data-aos="fade-right">
             <div class="luxury-img">
               <a href="https://www.kakslauttanen.fi/" target="_blank">
                 <img src="assets/images/Scenic-Card-1.avif" alt="">
               </a>
             </div>
          </div>
-         <div class="luxury-right">
+         <div class="luxury-right" data-aos="fade-left">
             <div class="luxury-text">
                <h3>
                 <a href="https://www.kakslauttanen.fi/" target="_blank">
@@ -150,7 +152,7 @@
 
                <div class="read-more-btn">
                 <a href="javascript:void(0)"  class=" moreless-button" >
-                   Read More
+                   Lue lisää
                   </span>
                 </a>
 
@@ -159,7 +161,7 @@
                   <span class="button-82-shadow"></span>
                   <span class="button-82-edge"></span>
                   <span class="button-82-front text">
-                  Visit Website
+                Vieraile verkkosivustolla
                   </span>
                 </a>
 
@@ -171,15 +173,15 @@
       </div>
 
 
-      <div class="luxury-wrap">
-        <div class="luxury-left">
+      <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://hotelli-isosyote.fi/en/" target="_blank">
                <img src="assets/images/Scenic-Card-2.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://hotelli-isosyote.fi/en/" target="_blank">
@@ -220,7 +222,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -229,7 +231,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+               Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -240,15 +242,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-        <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+        <div class="luxury-left" data-aos="fade-right">
            <div class="luxury-img">
              <a href="https://www.ruka.fi/en/skiresort/accommodation/rukavalley?adults=2&children=0&infants=0" target="_blank">
                <img src="assets/images/Scenic-Card-3.jpg" alt="">
              </a>
            </div>
         </div>
-        <div class="luxury-right">
+        <div class="luxury-right" data-aos="fade-left">
            <div class="luxury-text">
               <h3>
                <a href="https://www.ruka.fi/en/skiresort/accommodation/rukavalley?adults=2&children=0&infants=0" target="_blank">
@@ -289,7 +291,7 @@
 
               <div class="read-more-btn">
                <a href="javascript:void(0)"  class=" moreless-button" >
-                  Read More
+                  Lue lisää
                  </span>
                </a>
 
@@ -298,7 +300,7 @@
                  <span class="button-82-shadow"></span>
                  <span class="button-82-edge"></span>
                  <span class="button-82-front text">
-                 Visit Website
+               Vieraile verkkosivustolla
                  </span>
                </a>
 
@@ -309,15 +311,15 @@
         </div>
      </div>
 
-     <div class="luxury-wrap">
-      <div class="luxury-left">
+     <div class="luxury-wrap" data-aos="fade-up">
+      <div class="luxury-left" data-aos="fade-right">
          <div class="luxury-img">
            <a href="https://harriniva.fi/en/3-wilderness-resorts/jeris-lakeside-resort/" target="_blank">
              <img src="assets/images/Scenic-Card-4.jpg" alt="">
            </a>
          </div>
       </div>
-      <div class="luxury-right">
+      <div class="luxury-right" data-aos="fade-left">
          <div class="luxury-text">
             <h3>
              <a href="https://harriniva.fi/en/3-wilderness-resorts/jeris-lakeside-resort/" target="_blank">
@@ -358,7 +360,7 @@
 
             <div class="read-more-btn">
              <a href="javascript:void(0)"  class=" moreless-button" >
-                Read More
+                Lue lisää
                </span>
              </a>
 
@@ -367,7 +369,7 @@
                <span class="button-82-shadow"></span>
                <span class="button-82-edge"></span>
                <span class="button-82-front text">
-               Visit Website
+             Vieraile verkkosivustolla
                </span>
              </a>
 
@@ -379,15 +381,15 @@
    </div>
 
 
-   <div class="luxury-wrap">
-    <div class="luxury-left">
+   <div class="luxury-wrap" data-aos="fade-up">
+    <div class="luxury-left" data-aos="fade-right">
        <div class="luxury-img">
          <a href="https://arctictreehousehotel.com/" target="_blank">
            <img src="assets/images/Scenic-Card-5.jpg" alt="">
          </a>
        </div>
     </div>
-    <div class="luxury-right">
+    <div class="luxury-right" data-aos="fade-left">
        <div class="luxury-text">
           <h3>
            <a href="https://arctictreehousehotel.com/" target="_blank">
@@ -428,7 +430,7 @@
 
           <div class="read-more-btn">
            <a href="javascript:void(0)"  class=" moreless-button" >
-              Read More
+              Lue lisää
              </span>
            </a>
 
@@ -437,7 +439,7 @@
              <span class="button-82-shadow"></span>
              <span class="button-82-edge"></span>
              <span class="button-82-front text">
-             Visit Website
+           Vieraile verkkosivustolla
              </span>
            </a>
 
@@ -449,15 +451,15 @@
  </div>
       
 
- <div class="luxury-wrap">
-  <div class="luxury-left">
+ <div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://www.saariselkainn.fi/fi/" target="_blank">
          <img src="assets/images/Scenic-Card-6.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.saariselkainn.fi/fi/" target="_blank">
@@ -498,7 +500,7 @@
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -507,7 +509,7 @@
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+         Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -519,15 +521,15 @@
 </div>
      
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-pohjanhovi" target="_blank">
          <img src="assets/images/Scenic-Card-7.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.scandichotels.com/hotels/finland/rovaniemi/scandic-pohjanhovi" target="_blank">
@@ -568,7 +570,7 @@
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -577,7 +579,7 @@
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+         Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -589,15 +591,15 @@
 </div>
 
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://www.kumpeli.fi/en/front-page/" target="_blank">
          <img src="assets/images/Scenic-Card-8.avif" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.kumpeli.fi/en/front-page/" target="_blank">
@@ -638,7 +640,7 @@
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -647,7 +649,7 @@
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+         Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -659,15 +661,15 @@
 </div>
 
 
-<div class="luxury-wrap">
-  <div class="luxury-left">
+<div class="luxury-wrap" data-aos="fade-up">
+  <div class="luxury-left" data-aos="fade-right">
      <div class="luxury-img">
        <a href="https://www.laplandhotels.com/FI/lapin-hotellit/yllas/lapland-hotels-saaga/kylpyla.html" target="_blank">
          <img src="assets/images/Scenic-Card-9.jpg" alt="">
        </a>
      </div>
   </div>
-  <div class="luxury-right">
+  <div class="luxury-right" data-aos="fade-left">
      <div class="luxury-text">
         <h3>
          <a href="https://www.laplandhotels.com/FI/lapin-hotellit/yllas/lapland-hotels-saaga/kylpyla.html" target="_blank">
@@ -708,7 +710,7 @@
 
         <div class="read-more-btn">
          <a href="javascript:void(0)"  class=" moreless-button" >
-            Read More
+            Lue lisää
            </span>
          </a>
 
@@ -717,7 +719,7 @@
            <span class="button-82-shadow"></span>
            <span class="button-82-edge"></span>
            <span class="button-82-front text">
-           Visit Website
+         Vieraile verkkosivustolla
            </span>
          </a>
 
@@ -740,7 +742,7 @@
 
     <div class="news-letter ptb-50">
         <div class="container">
-             <div class="newsletter-wrap">
+             <div class="newsletter-wrap" data-aos="fade-up">
                 <div class="newsletter-heading">
                  <h3>
                   Tilaa uutiskirjeemme pysyäksesi ajan tasalla
@@ -761,12 +763,12 @@
 
     <div class="faq-sec ptb-50">
         <div class="container">
-           <div class="site-heading">
+           <div class="site-heading" data-aos="fade-up">
                <h2>
                 Usein Kysytyt Kysymykset (UKK)
                </h2>
            </div>
-             <div class="faq-wrap">
+             <div class="faq-wrap" data-aos="fade-up">
                <div class="accordion" id="accordionExample">
                  <div class="accordion-item">
                    <h2 class="accordion-header" id="headingOne">
@@ -872,7 +874,7 @@
 
     <!-- Disclaimer section start -->
 
-    <div class="disclaimer-sec ptb-50">
+    <div class="disclaimer-sec ptb-50" data-aos="fade-up">
         <div class="container">
             <div class="disclaimer-text">
                 <h4>
@@ -1028,6 +1030,7 @@ hotellit
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script  src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script  src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.0/dist/aos.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
 
