--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ ajankohtaisimpien tietojen saamiseksi, ole hyvä ja ota suoraan yhteyttä palvel
     <!-- Disclaimer section end -->
 
       <!-- footer section start -->
-      <div class="site-footer ptb-50"  data-aos="fade-up">
+      <div class="site-footer ptb-50"  >
         <div class="container">
             <div class="row">
                <div class="col-lg-4 col-md-6">
